# crop_scanned_photos

./: .gitignore  LICENSE  README.md  extract.py  pyproject.toml
crop_scanned_photos/: extract.py
